--- a/app/views/categories/_super_cat_nav.html.erb
+++ b/app/views/categories/_super_cat_nav.html.erb
@@ -10,7 +10,7 @@
       attrs
     )
   %>
-  <div class="drop-down-menu__target drop-down box box--drop-down">
+  <div class="drop-down-menu__target drop-down pointer-up box box--drop-down">
     <div class="island">
       <strong class="drop-down-menu__hdr-alt">Top Categories</strong>
       <ul class="drop-down-menu__list-alt">
