--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
 			<%# //Menu toggle button for palm/small tablet devices %>
 
 			<%# Centre select and sub/tertiary/social navigation %>
-			<div class="header-menu-toggle drop-down" id="header-menu-toggle">
+			<div class="header-menu-toggle drop-down pointer-up" id="header-menu-toggle">
 
 				<%# Centre selector %>
 				<div class="header-centre-select container">
@@ -74,7 +74,7 @@
 				<%# //Sub navigation %>
 
 				<%# Social follow and Tertiary navigation %>
-				<div class="nav-social-tertiary-container container drop-down" id="nav-social-tertiary-container">
+				<div class="nav-social-tertiary-container container drop-down pointer-up" id="nav-social-tertiary-container">
 
 					<%# Centre selector (large tablet/desk) %>
 					<a href="/" target="_self" class="header-centre-select__link header-centre-select__link--alt" rel="home">Change centre<span class="icon icon--arrow-right icon--xlrg icon--flush-top" aria-hidden="true"></span></a>
