--- a/app/views/layouts/_header_national.html
+++ b/app/views/layouts/_header_national.html
@@ -17,7 +17,7 @@
 			<%# //Menu toggle button (palm) %>
 
 			<%# Centre select tabs (palm) %>
-			<nav class="header__tabs header-menu-toggle tabs drop-down" id="header-menu-toggle-palm" role="navigation">
+			<nav class="header__tabs header-menu-toggle tabs drop-down pointer-up" id="header-menu-toggle-palm" role="navigation">
 
 				<%# Tab header %>
 				<div class="header__tabs__hdr">
@@ -59,7 +59,7 @@
 				<h1>Choose a <span class="hide-visually">centre to see products, deals, events, and centre info:</span></h1>
 				<div class="drop-down-menu drop-down-container">
           <button class="drop-down-menu__trigger btn btn--main btn--main-alt2 btn--pointer btn--pointer-padding-med" toggle-visibility="header-menu-toggle-non-palm">Westfield Centre<span aria-hidden="true" class="icon icon--lrg icon--arrow-down-full btn--pointer__icon"></span></button>
-          <div class="drop-down-menu__target drop-down box box--drop-down" id="header-menu-toggle-non-palm">
+          <div class="drop-down-menu__target drop-down pointer-up box box--drop-down" id="header-menu-toggle-non-palm">
           	<dl class="drop-down-menu__list">
       				<% %w(NSW ACT QLD VIC SA WA).each do |state| %>
 	          		<dt class="drop-down-menu__hdr-sub drop-down-menu__divider"><%= state %></dt>
