--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -71,7 +71,7 @@
       <%# //Drop down trigger (narrow view) %>
 
       <%# Drop down target (narrow view) %>
-      <div id="filters" class="drop-down-menu__target drop-down box box--drop-down">
+      <div id="filters" class="drop-down-menu__target drop-down pointer-up box box--drop-down">
 
         <ul class="filters__list">
 
@@ -92,7 +92,7 @@
             </button>
             <%# //Wide view trigger %>
 
-            <div ng-show="activeFilter === 'category'" class="filters__target">
+            <div ng-show="activeFilter === 'category'" class="filters__target pointer-up">
               <div ng-show="search.categories.field === 'super_cat'"><div ng-include src="'CategoryItemTemplate'"></div></div>
               <div ng-show="search.categories.field === 'category'"><div ng-include src="'CategoryItemTemplate'"></div></div>
               <div ng-show="search.categories.field === 'sub_category'"><div ng-include src="'SubCategoryTemplate'"></div></div>
@@ -118,7 +118,7 @@
             </button>
             <%# //Wide view trigger %>
 
-            <div ng-show="activeFilter === 'retailer'" class="filters__target">
+            <div ng-show="activeFilter === 'retailer'" class="filters__target pointer-up">
 
               <div class="drop-down-menu__hdr drop-down-menu__divider islet">
                 <h3>{{ search.retailers.title }}</h3>
@@ -161,7 +161,7 @@
             </button>
             <%# //Wide view trigger %>
 
-            <div ng-show="activeFilter === 'brand'" class="filters__target">
+            <div ng-show="activeFilter === 'brand'" class="filters__target pointer-up">
 
               <div class="drop-down-menu__hdr drop-down-menu__divider islet">
                 <h3>{{ search.brands.title }}</h3>
@@ -204,7 +204,7 @@
             </button>
             <%# //Wide view trigger %>
 
-            <div ng-show="activeFilter === 'colour'" class="filters__target">
+            <div ng-show="activeFilter === 'colour'" class="filters__target pointer-up">
 
               <div class="drop-down-menu__hdr drop-down-menu__divider islet">
                 <h3>{{ search.colours.title }}</h3>
@@ -242,7 +242,7 @@
             </button>
             <%# //Wide view trigger %>
 
-            <div ng-show="activeFilter === 'size'" class="filters__target">
+            <div ng-show="activeFilter === 'size'" class="filters__target pointer-up">
 
               <div class="drop-down-menu__hdr drop-down-menu__divider islet">
                 <h3>{{ search.sizes.title }}</h3>
@@ -280,7 +280,7 @@
             </button>
             <%# //Wide view trigger %>
 
-            <div ng-show="activeFilter === 'price'" class="filters__target">
+            <div ng-show="activeFilter === 'price'" class="filters__target pointer-up">
 
               <div class="drop-down-menu__hdr drop-down-menu__divider islet">
                 <h3>{{ search.price.title }}</h3>
