--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -31,7 +31,7 @@
 
               <li class="drop-down-menu drop-down-container">
                 <button class="drop-down-menu__trigger btn btn--main btn--main-alt2 btn--pointer btn--pointer-padding-med" toggle-visibility="stores-filters">Category<span aria-hidden="true" class="icon icon--lrg icon--arrow-down-full btn--pointer__icon"></span></button>
-                <div class="drop-down-menu__target drop-down-menu__target--alt-width-palm drop-down box box--drop-down" id="stores-filters">
+                <div class="drop-down-menu__target drop-down-menu__target--alt-width-palm drop-down pointer-up box box--drop-down" id="stores-filters">
                   <ul class="drop-down-menu__list">
                     <li class="drop-down-menu__divider"><button class="btn btn--full btn--full-left">Women's Fashion</button></li>
                     <li class="drop-down-menu__divider"><button class="btn btn--full btn--full-left">Shoes &amp; Footwear</button></li>
