--- a/app/views/shared/_social_share_inner.html.erb
+++ b/app/views/shared/_social_share_inner.html.erb
@@ -1,5 +1,5 @@
 <%# Social share %>
-<ul class="drop-down horiz-list horiz-list--fit horiz-list--center is-active js-social-share-list">
+<ul class="drop-down horiz-list horiz-list--fit horiz-list--center">
 
   <%# Facebook %>
   <li class="social-share__facebook">
