Add level no to storefront, apply aria-hidden attr to store list icons and text correction

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -48,6 +48,11 @@
               <%# Store meta %>
               <dl class="storefront__details__meta">
 
+                <%- if @store.level.present? %>
+                  <dt class="hide-visually">Shopping centre level</dt>
+                  <dd class="hide-visually"><%= @store.level %></dd>
+                <%- end %>
+
                 <%- if @store.closing_time.present? %>
                   <dt class="hide-visually">Opening hours</dt>
                   <dd class="storefront__details__meta__no-indent">Open till <time datetime="<%= @store.closing_time %>"><%= twelve_hour_format @store.closing_time %></time> tonight</dd>
