--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -118,7 +118,7 @@
                 <div class="stores-list__store-name">
                   <strong><%= link_to store.name, (centre_store_url @centre.code, store.retailer_code, store.id), class: 'js-pjax-link-stores' %></strong>
                   <%# Phone no %>
-                  <span class="hide-fully--palm"><span class="hide-visually">Phone number: </span><%= phone_format store.phone_number %></span>
+                  <span class="hide-fully--palm"><span class="hide-visually">Call store: </span><%= phone_format store.phone_number %></span>
                   <%# //Phone no %>
                   <%# [BACKEND] inject this `span` when a category filter has been applied %>
                   <%# <span class="icon icon--pin icon--flush-top"></span> %>
@@ -147,14 +147,14 @@
                   <%# Phone no %>
                   <%= phone_link store.phone_number, class: 'storefront-storelist-phone-map-links__cell storefront-storelist-phone-map-links__cell--phone hide-fully--non-palm' do |phone_number| %>
                     <span class="hide-visually">Call store: <%= phone_number %></span>
-                    <span class="icon icon--phone2 icon--flush-top storefront-storelist-phone-map-links__cell__valign"></span>
+                    <span class="icon icon--phone2 icon--flush-top storefront-storelist-phone-map-links__cell__valign" aria-hidden="true"></span>
                   <% end %>
                   <%# //Phone no %>
 
                   <%# Location %>
                   <a href="#infoDiv" class="storefront-storelist-phone-map-links__cell storefront-storelist-phone-map-links__cell--location" data-store-id="<%= store.id %>">
                     <span class="hide-visually">View on map</span>
-                    <span class="icon icon--pin icon--flush-top storefront-storelist-phone-map-links__cell__valign"></span>
+                    <span class="icon icon--pin icon--flush-top storefront-storelist-phone-map-links__cell__valign" aria-hidden="true"></span>
                   </a>
                   <%# //Location %>
 
