Add spacing base to 'horiz list' abstraction - WSF-5938

--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -30,7 +30,7 @@
 
       <%# Nav %>
       <nav role="navigation">
-        <ul class="horiz-list horiz-list--gutter-half">
+        <ul class="horiz-list horiz-list--spacing-half">
           <li>
             <a href="<%= products_path %>">
               <span class="icon icon--shirt" aria-hidden="true"></span>Shop products
