--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -27,7 +27,7 @@
           <%# Filters %>
 
           <%# [BACKEND] Markup for the 'Category' and 'Gift Card' filters %>
-          <%#<ul class="stores-maps__filters horiz-list horiz-list--gutter-half">
+          <%#<ul class="stores-maps__filters horiz-list horiz-list--spacing-half">
 
               <li class="drop-down-menu drop-down-container">
                 <button class="drop-down-menu__trigger btn btn--main btn--main-alt2 btn--pointer btn--pointer-padding-med" toggle-visibility="stores-filters">Category<span aria-hidden="true" class="icon icon--lrg icon--arrow-down-full btn--pointer__icon"></span></button>
