--- a/app/assets/stylesheets/partials/abstractions/_horizontal-list.scss
+++ b/app/assets/stylesheets/partials/abstractions/_horizontal-list.scss
@@ -10,7 +10,8 @@
   .horiz-list--fit               - Force the items to occupy 100% of the available width of its parent.
   .horiz-list--comma             - Comma separated.
   .horiz-list--slash             - Slash separated.
-  .horiz-list--half              - Half spacing between list items.
+  .horiz-list--spacing-base			 - Base spacing between list items.
+  .horiz-list--spacing-half       - Half spacing between list items.
 
   Styleguide Horizontal List
 */
@@ -89,10 +90,16 @@
 
 .horiz-list--comma > li:after {content: ",";}
 
-/* Half spacing between `li` */
-.horiz-list--gutter-half > li {
-	@include to-rem(padding-left, $spacing-half);
+/* -Spacing- */
 
-	/* Kill rules for the first item */
-	&:first-child {padding-left: 0;}
+/* Shared - remove gutter for the first item */
+.horiz-list--spacing-base,
+.horiz-list--spacing-half {
+	> li:first-child {margin-left: 0;}
 }
+
+/* Base */
+.horiz-list--spacing-base > li {@include to-rem(margin-left, $spacing-base);}
+
+/* Half */
+.horiz-list--spacing-half > li {@include to-rem(margin-left, $spacing-half);}
