Make smooth scrolling available for touch devices

--- a/app/assets/stylesheets/partials/base/_tables.scss
+++ b/app/assets/stylesheets/partials/base/_tables.scss
@@ -66,9 +66,8 @@ table {
   overflow-x: auto;
   @extend %mrg-base;
 
-  /* iOS/Android */
-  .ios &,
-  .android & {
+  /* Touch device */
+  .touch & {
     overflow-x: scroll;
     -webkit-overflow-scrolling: touch;
   }
