Adding preloader, ARIA live attributes and accessiblity testing

--- a/app/assets/stylesheets/partials/modules/_detail-view.scss
+++ b/app/assets/stylesheets/partials/modules/_detail-view.scss
@@ -238,6 +238,13 @@
         @include target-webkit {
           .icon--share:before {top: -2px;}
         }
+
+        /* Preloader */
+        .preloader__spinner {
+          width: 16px;
+          height: 16px;
+          background-size: 16px 16px;
+        }
     }
   }
 
