--- a/app/assets/stylesheets/partials/modules/_tile.scss
+++ b/app/assets/stylesheets/partials/modules/_tile.scss
@@ -137,10 +137,9 @@
     position: absolute;
     @include to-rem(top right, $spacing-quarter);
 
-    /* Only show on non-touch devices as they have hover */
+    /* Only show on non-touch devices when tile is hovered and to keep in view via dynamic `is-active` class */
     .no-touch .tile:hover &,
     .no-touch .tile &.is-active {display: block;}
-
 
     /* Buttons */
     .controls__btn {
@@ -152,10 +151,13 @@
 
         /* Icon */
         .icon:before {position: static;}
+
+        /* Preloader */
+        .preloader em {@include hide-visually;}
     }
 
-    /* Remove the border radius when button is active */
-    &.is-active .controls__btn {
+    /* Active state */
+    .is-active .controls__btn {
       border-color: $color-grey-dark-3;
       border-bottom-right-radius: 0;
       border-bottom-left-radius: 0;
