--- a/app/assets/stylesheets/partials/modules/_social-share.scss
+++ b/app/assets/stylesheets/partials/modules/_social-share.scss
@@ -37,33 +37,6 @@ $share-pinterest: #ca2026 !default;
 		/* Icon for 'Tile' version */
 		.tile & .icon:before {margin-right: 0;}
 
-	/* --Drop down menu-- */
-	.drop-down {
-
-	  /* Alter position and width at this breakpoint */
-	  @include respond-min($non-palm) {
-      @include to-rem(width, 290);
-      left: 100%;
-      top: 0;
-      margin-left: -1px;
-	  }
-
-	  /* 'Tile' version */
-	  .tile & {
-	  	width: 100%;
-	  	left: 0;
-	  	top: 100%;
-      margin-left: 0;
-
-	  	li {
-	  		display: block;
-
-	  		/* Round off bottom left/right corners */
-	  		&:last-child a {border-radius: 0 0 $border-radius $border-radius;}
-	  	}
-	  }
-	}
-
 	/* --Drop down menu trigger-- */
   .social-share__trigger {
     color: $color-grey-dark-3;
@@ -75,26 +48,69 @@ $share-pinterest: #ca2026 !default;
     &:hover,
     &:focus {color: $color-txt-light;}
 
-    /* Saved state for 'Favourites' button */
-    &.is-saved {color: $color-brand;}
+    /* Preloader */
+    .preloader {
+      display: none;
+
+      /* Override bg color */
+      &,
+      .preloader__spinner {background-color: transparent;}
+    }
   }
 
-    /* Active state */
-    &.is-active .social-share__trigger {
-      background-color: $color-grey-dark-3;
-      color: #fff;
+  /* Active state */
+  &.is-active .social-share__trigger {
+    background-color: $color-grey-dark-3;
+    color: #fff;
 
-      /* Hide elements that need to be shown when the drop down is non-active */
-      .drop-down-container__non-active {display: none;}
+    /* Hide elements that need to be shown when the drop down is non-active */
+    .drop-down-container__non-active {display: none;}
 
-      /* Show elements that need to be shown when the drop down is active */
-      .drop-down-container__active {display: inline-block;}
-    }
+    /* Show elements that need to be shown when the drop down is active */
+    .drop-down-container__active {display: inline-block;}
+  }
+
+  /* Loading state */
+  &.is-loading .social-share__trigger {
+
+    /* Show the preloader */
+    .preloader {display: inline-block;}
+
+    /* Hide elements whilst in loading state */
+    .drop-down-container__non-active,
+    .drop-down-container__active {display: none;}
+  }
 
     /* Hide button text for 'Tile' version */
     .tile & .social-share__trigger__txt {@include hide-visually;}
 
   /* --Drop down menu target-- */
+  .drop-down {
+
+    /* Alter position and width at this breakpoint */
+    @include respond-min($non-palm) {
+      @include to-rem(width, 290);
+      left: 100%;
+      top: 0;
+      margin-left: -1px;
+    }
+
+    /* 'Tile' version */
+    .tile & {
+      width: 100%;
+      left: 0;
+      top: 100%;
+      margin-left: 0;
+      z-index: $z-index-high - 1;
+
+      li {
+        display: block;
+
+        /* Round off bottom left/right corners */
+        &:last-child a {border-radius: 0 0 $border-radius $border-radius;}
+      }
+    }
+  }
 
   /* Active state */
   &.is-active .drop-down.horiz-list--fit {
