--- a/app/views/shared/_social_share.html.erb
+++ b/app/views/shared/_social_share.html.erb
@@ -1,6 +1,12 @@
-<div class="social-share drop-down-container js-social-share" data-url="<%= tile_social_share_url(@centre, kind, id) %>">
+<div class="social-share drop-down-container js-social-share" data-url="<%= tile_social_share_url(@centre, kind, id) %>" aria-live="polite" aria-atomic="true">
 
-  <button type="button" class="social-share__trigger controls__btn btn">
+  <button type="button" class="social-share__trigger controls__btn btn" aria-haspopup="true">
+    <%# Preloader %>
+    <span class="preloader">
+      <span class="preloader__spinner"></span>
+      <em>Loading&#8230;</em>
+    </span>
+    <%# //Preloader %>
     <span class="icon icon--share icon--lrg icon--spacing-lrg drop-down-container__non-active" aria-hidden="true"></span><!--
     --><span class="drop-down-container__non-active social-share__trigger__txt">Share</span><!--
     --><span class="icon icon--close-lrg icon--lrg icon--spacing-lrg drop-down-container__active" aria-hidden="true"></span><!--
