Added buttons to styleguide

--- a/app/assets/stylesheets/partials/buttons/_expand-collapse.scss
+++ b/app/assets/stylesheets/partials/buttons/_expand-collapse.scss
@@ -3,11 +3,9 @@
    ====================================================================================== */
 
 /*
-	Usage:
-		Used when something needs to be expanded and collapsed.
+	Used when something needs to be expanded and collapsed.
 
-	Demo:
-		Style Guide -> Buttons -> Expand/Collapse
+	Styleguide Expand/Collapse
 */
 
 .btn--expand-collapse {
