--- a/app/assets/stylesheets/partials/buttons/_faux-link.scss
+++ b/app/assets/stylesheets/partials/buttons/_faux-link.scss
@@ -3,15 +3,9 @@
    ====================================================================================== */
 
 /*
-	Usage:
-		Make a button look like a link.
+	Make a button look like a link.
 
-	Note:
-		-	The base link styles are repeated here so not very DRY (need to look into this).
-		-	Extends from `.btn`, see: 'buttons/base'.
-
-	Demo:
-		Style Guide -> Buttons -> Faux Link
+	Styleguide Faux Link
 */
 
 .btn--faux-link {
