--- a/app/assets/stylesheets/partials/buttons/_main.scss
+++ b/app/assets/stylesheets/partials/buttons/_main.scss
@@ -3,7 +3,7 @@
    ====================================================================================== */
 
 /*
-  The main button for the site.
+  The main buttons for the site.
 
   .btn--main-blue             - Blue
   .btn--main-dark             - Dark
