--- a/app/assets/stylesheets/partials/buttons/_menu.scss
+++ b/app/assets/stylesheets/partials/buttons/_menu.scss
@@ -3,11 +3,9 @@
    ====================================================================================== */
 
 /*
-	Usage:
-		Menu (hamburger) button.
+	Menu (hamburger) button.
 
-	Demo:
-		Style Guide -> Buttons -> Menu
+	Styleguide Menu
 */
 
 .btn--menu {
