--- a/app/assets/stylesheets/partials/buttons/_site-feedback.scss
+++ b/app/assets/stylesheets/partials/buttons/_site-feedback.scss
@@ -3,11 +3,9 @@
    ====================================================================================== */
 
 /*
-	Usage:
-		Global site feedback button that sits fixed at the bottom right of the viewport for large desktop and in the hamburger header drop down menu for large tablet.
+	Global site feedback button that sits fixed at the bottom right of the viewport for large desktop and in the hamburger header drop down menu for large tablet.
 
-	Demo:
-		Style Guide -> Buttons -> Site Feedback
+	Styleguide Site Feedback
 */
 
 .btn--site-feedback {
