--- a/app/assets/stylesheets/partials/buttons/_base.scss
+++ b/app/assets/stylesheets/partials/buttons/_base.scss
@@ -3,17 +3,17 @@
    ====================================================================================== */
 
 /*
-	Basic button structural/reset styling that all buttons need, can only be extended from not used by itself.
+	Generic button styling
 
-	.btn--full              - Make button span full width of parent
-	.btn--full-left         - Make button span full width of parent and align text to the left
-	.btn--sml								- Small button
-	.btn--lrg               - Large button
-	.btn--spacing           - Apply right spacing for adjacent buttons
-	.btn--pointer           - Position icon over to the far right of the button
-	.btn--pointer-alt       - Position icon to the far left of the button
+	.btn--full                        - Make button span full width of parent
+	.btn--full.btn--full-left         - Make button span full width of parent and align text to the left
+	.btn--sml								          - Small button
+	.btn--lrg                         - Large button
+	.btn--spacing                     - Apply right spacing for adjacent buttons
+	.btn--pointer                     - Position icon over to the far right of the button
+	.btn--pointer-alt                 - Position icon to the far left of the button
 
-	Styleguide Base Button
+	Styleguide Button Base
 */
 
 /* Reset all the browser default styles */
