Added heading base styles

--- a/app/assets/stylesheets/partials/base/_headings.scss
+++ b/app/assets/stylesheets/partials/base/_headings.scss
@@ -3,6 +3,10 @@
    ====================================================================================== */
 
 /*
+  Base heading styles
+
+  .h1    - Heading 1 style
+
   Styleguide Headings
 */
 
