Cleaning up 'translate' rules - WSF-5535

--- a/app/assets/stylesheets/partials/layout/_header.scss
+++ b/app/assets/stylesheets/partials/layout/_header.scss
@@ -629,7 +629,7 @@ $header-color-link-hover: $color-brand !default;
 						position: absolute;
 						right: 0;
 						top: 50%;
-						@include translate(0, -45%);
+						@include translateY(-45%);
 					}
 
 					/* Make block level and fix alignment at this breakpoint */
@@ -840,7 +840,7 @@ $header-color-link-hover: $color-brand !default;
 						position: absolute;
 						top: 50%;
 						right: 0;
-						@include translate(0, -50%);
+						@include translateY(-50%);
 						margin-bottom: 0;
 
 						/* Old IE */
@@ -944,7 +944,7 @@ $header-color-link-hover: $color-brand !default;
 				position: absolute;
 				right: 0;
 				top: 50%;
-				@include translate(0, -50%);
+				@include translateY(-50%);
 
 				/* Apply link colours */
 				.header & {
@@ -966,7 +966,7 @@ $header-color-link-hover: $color-brand !default;
         /* Alter top positioning and turn off `translate` for 'Centre home page hero banner' */
 				.header--hero & {
 					@include to-rem(top, 54);
-					@include translate(0, 0);
+					@include translateY(0);
 				}
 
 				/* Old IE - fix for not supporting `translate` */
@@ -1176,7 +1176,7 @@ $header-color-link-hover: $color-brand !default;
 						position: absolute;
 						right: 0;
 						top: 50%;
-						@include translate(0, -50%);
+						@include translateY(-50%);
 						@include to-rem(padding, 6 $spacing-third);
 
 						/* Old IE */
@@ -1419,7 +1419,7 @@ $header-color-link-hover: $color-brand !default;
 				position: absolute;
 				@include to-rem(right, $spacing-third);
 				top: 50%;
-				@include translate(0, -50%);
+				@include translateY(-50%);
 			}
 
 		/* Search results */
@@ -1634,7 +1634,7 @@ $header-color-link-hover: $color-brand !default;
 						position: absolute;
 						right: 0;
 						top: 50%;
-						@include translate(0, -50%);
+						@include translateY(-50%);
 					}
 			}
 		}
