--- a/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
+++ b/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
@@ -96,7 +96,7 @@
         position: absolute;
         top: 50%;
         left: 0;
-        @include translate(0, -50%);
+        @include translateY(-50%);
         @include to-rem(padding, $spacing-half);
       }
     }
