--- a/app/assets/stylesheets/partials/modules/_centre-location.scss
+++ b/app/assets/stylesheets/partials/modules/_centre-location.scss
@@ -4,7 +4,7 @@
 
 /*
   Usage:
-    Contains the Google static map of the centre and the centre addres
+    Contains the Google static map of the centre and the centre address
 
   Demo:
     Style Guide -> Modules -> Centre Location
