Tile module clean ups

--- a/app/views/shared/tiles/_deal.html.erb
+++ b/app/views/shared/tiles/_deal.html.erb
@@ -4,6 +4,7 @@
       alt: "#{result.store_name} logo",
       width: 168,
       height: 62,
+      class: "tile__meta__logo",
       crop: :pad,
       format: :auto
     %>
