--- a/app/assets/stylesheets/partials/modules/_tile.scss
+++ b/app/assets/stylesheets/partials/modules/_tile.scss
@@ -15,7 +15,7 @@
   color: $color-txt-base;
   @include font-size($font-size-sml, 1.5);
 
-  /* So the social share controls can be seen when they overlap another tile */
+  /* So the social share module can be seen when they overlap another tile */
   &:hover {z-index: 2;}
 
   /* Apply bottom spacing when inside the 'Pin board' module */
@@ -41,24 +41,6 @@
   }
 }
 
-  /* Meta */
-  .tile__meta {
-    position: relative;
-    @include to-rem(min-height, $spacing-base*2);
-    @include to-rem(padding, 8 10);
-  }
-
-    /* Inner container */
-    .tile__meta__inner {
-      /* Needed to create spacing for `.tile__meta__icon`. Spacing = `.tile__meta` left padding + width of `.tile__meta__icon` + spacing between `.tile__meta__icon` and the text  */
-      @include to-rem(margin-left, 25);
-
-      /* Increase the left margin at this breakpoint */
-      @include respond-min($non-palm) {
-        @include to-rem(margin-left, 30);
-      }
-    }
-
   /* Image */
   .tile__image {
     text-align: center;
@@ -76,60 +58,74 @@
       @extend %transition-subtle;
       cursor: pointer;
 
+      /* Hover state */
       .tile:hover & {background-color: rgba($color-brand, 0.15);}
     }
   }
 
-  /* Icon */
-  .tile__meta__icon {
-    position: absolute;
-    @include to-rem(left, -2);
-    @include to-rem(top, 9);
-    border-left: 2px solid $color-brand;
-    background-color: $color-grey-light-3;
-    color: $color-txt-light;
-    @include font-size($font-size-lrg, 1);
-    @include to-rem(padding, 3 5);
-
-    /* Increase the padding at this breakpoint, as we have more space */
-    @include respond-min($non-palm) {
-      @include to-rem(padding, 5 7);
-    }
+  /* Meta */
+  .tile__meta {
+    position: relative;
+    @include to-rem(min-height, $spacing-base*2);
+    @include to-rem(padding, 8 10);
   }
 
-  /* Header */
-  .tile__meta__hdr {
-    color: $color-txt-dark;
-    font-weight: bold;
-    @include font-size($font-size-milli, 1.5);
+    /* Icon */
+    .tile__meta__icon {
+      position: absolute;
+      @include to-rem(left, -2);
+      @include to-rem(top, 9);
+      border-left: 2px solid $color-brand;
+      background-color: $color-grey-light-3;
+      color: $color-txt-light;
+      @include font-size($font-size-lrg, 1);
+      @include to-rem(padding, 3 5);
 
-    /* Increase the font size at this breakpoint */
-    @include respond-min($desk) {
-      @include font-size($font-size-sml, 1.5);
-    }
-  }
-
-  /* Description */
-  .tile__meta__desc {
-    color: $color-txt-light;
-    @include font-size($font-size - 4, 1.5);
-
-    /* Increse font size at this breakpoint */
-    @include respond-min($desk) {
-      @include font-size($font-size-milli, 1.5);
-    }
-  }
-
-    /* Price */
-    .tile__meta__price {
-      color: $color-txt-dark;
-      font-weight: bold;
-
-      /* Make the font larger at this breakpoint, as we have the space */
-      @include respond-min($desk) {
-        @include font-size($font-size-milli, 1);
+      /* Increase the padding at this breakpoint, as we have more space */
+      @include respond-min($non-palm) {
+        @include to-rem(padding, 5 7);
       }
     }
+
+    /* Inner container */
+    .tile__meta__inner {
+      /* Needed to create spacing for `.tile__meta__icon`. Spacing = `.tile__meta` left padding + width of `.tile__meta__icon` + spacing between `.tile__meta__icon` and the text */
+      @include to-rem(margin-left, 25);
+
+      /* Increase the left margin at this breakpoint */
+      @include respond-min($non-palm) {
+        @include to-rem(margin-left, 30);
+      }
+    }
+
+      /* Header */
+      .tile__meta__hdr {
+        color: $color-txt-dark;
+        font-weight: bold;
+        @include font-size($font-size-milli, 1.5);
+
+        /* Increase font size at this breakpoint */
+        @include respond-min($iphone-landscape) {
+          @include font-size($font-size-sml, 1.5);
+        }
+      }
+
+      /* Description */
+      .tile__meta__desc {
+        color: $color-txt-light;
+        @include font-size($font-size - 4, 1.5);
+
+        /* Increse font size at this breakpoint */
+        @include respond-min($iphone-landscape) {
+          @include font-size($font-size-milli, 1.5);
+        }
+      }
+
+        /* Price */
+        .tile__meta__desc__price {
+          color: $color-txt-dark;
+          font-weight: bold;
+        }
 
   /* Controls - 'Share' and 'Favourites' */
   .tile__controls {
@@ -175,7 +171,7 @@
 
     /* Header and logo spacing */
     .tile__meta__hdr,
-    img {
+    .tile__meta__logo {
       @include to-rem(margin-bottom, $spacing-quarter);
 
       /* Increase the bottom spacing at this breakpoint */
@@ -185,7 +181,7 @@
     }
 
     /* Logo */
-    img {@include to-rem(width, 84);}
+    .tile__meta__logo {@include to-rem(width, 84);}
 
     /* Description */
     .tile__meta__desc {
