--- a/app/views/shared/tiles/_product.html.erb
+++ b/app/views/shared/tiles/_product.html.erb
@@ -17,7 +17,7 @@
   <div class="tile__meta__inner">
     <h3 class="tile__meta__hdr txt-truncate"><%= result.name %></h3>
     <p class="tile__meta__desc txt-truncate">
-      <span class="tile__meta__price"><%=number_to_currency result.sale_price %></span>
+      <span class="tile__meta__desc__price"><%=number_to_currency result.sale_price %></span>
       from <strong><%= result.retail_chain_name %></strong>
     </p>
   </div>
